--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   "dependencies": {
     "auto-launch": "^5.0.6",
     "dotenv": "^17.2.3",
+    "electron-store": "^8.1.0",
     "node-thermal-printer": "^4.5.0",
     "serialport": "^13.0.0",
     "winston": "^3.19.0",
