--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "build": {
     "appId": "com.rangooo.agente",
+    "publish": [
+      {
+        "provider": "github",
+        "owner": "https://github.com/Misael1981",
+        "repo": "https://github.com/Misael1981/printing-agent_rangooo.git"
+      }
+    ],
     "productName": "Agente de Impressao Rangooo",
     "directories": {
       "output": "dist"
@@ -27,6 +34,7 @@
     "auto-launch": "^5.0.6",
     "dotenv": "^17.2.3",
     "electron-store": "^8.1.0",
+    "electron-updater": "^6.6.2",
     "node-thermal-printer": "^4.5.0",
     "serialport": "^13.0.0",
     "winston": "^3.19.0",
