--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "dist": "electron-builder"
+    "dist": "electron-builder",
+    "build:win": "electron-builder --win"
   },
   "build": {
     "appId": "com.rangooo.agente",
@@ -26,7 +27,12 @@
     ],
     "win": {
       "target": "nsis",
-      "icon": "src/public/assets/favicon.ico"
+      "icon": "src/public/assets/icon.png"
+    },
+    "mac": {
+      "category": "public.app-category.business",
+      "target": "dmg",
+      "icon": "src/public/assets/icon.png"
     },
     "nsis": {
       "oneClick": true,
